# guitar

./: Cargo.toml  GRAPH.MD  README.md  rustfmt.toml
.github/workflows/: ci.yml
benches/: commit_batching.rs  file_history_queries.rs  git_queries.rs  submodule_queries.rs  worktree_queries.rs
src/: lib.rs  main.rs
src/app/: app.rs  app_default.rs  app_draw_branches.rs  app_draw_graph.rs  app_draw_inspector.rs  app_draw_modal_checkout.rs  app_draw_modal_commit.rs  app_draw_modal_create_branch.rs  app_draw_modal_delete_branch.rs  app_draw_modal_delete_tag.rs  app_draw_modal_error.rs  app_draw_modal_grep.rs  app_draw_modal_input.rs  app_draw_modal_solo.rs  app_draw_reflogs.rs  app_draw_settings.rs  app_draw_splash.rs  app_draw_stashes.rs  app_draw_status.rs  app_draw_statusbar.rs  app_draw_tags.rs  app_draw_title.rs  app_draw_viewer.rs  app_draw_worktrees.rs  app_input.rs  app_layout.rs  input.rs  input_git.rs  input_navigation.rs  mod.rs
src/app/draw/: branches.rs  buffered.rs  graph.rs  inspector.rs  pane_window.rs  reflogs.rs  search.rs  settings.rs  splash.rs  stashes.rs  status.rs  statusbar.rs  submodules.rs  tags.rs  title.rs  viewer.rs  worktrees.rs
src/app/draw/modals/: auth.rs  checkout.rs  delete_branch.rs  delete_tag.rs  error.rs  file_search.rs  input.rs  key_capture.rs  rebase.rs  remotes.rs  remove_worktree.rs  shared.rs  solo.rs  worktree_chooser.rs
src/app/input/: context_menu.rs  events.rs  git.rs  handler.rs  modals.rs  navigation.rs  remotes.rs  submodules.rs  text.rs  worktrees.rs
src/app/state/: defaults.rs  layout.rs
src/config/: layout.rs
src/core/: batcher.rs  branches.rs  buffer.rs  chunk.rs  graph_service.rs  layers.rs  oids.rs  reflogs.rs  renderers.rs  stashes.rs  submodules.rs  tags.rs  walker.rs  worktrees.rs
src/git/: auth.rs
src/git/actions/: branching.rs  checkout.rs  cherrypicking.rs  commits.rs  committing.rs  fetching.rs  merging.rs  network.rs  pushing.rs  rebasing.rs  remotes.rs  resetting.rs  staging.rs  stashing.rs  submodules.rs  tagging.rs  worktrees.rs
src/git/os/: path.rs
src/git/queries/: commits.rs  diffs.rs  file_history.rs  files.rs  helpers.rs  reflogs.rs  remotes.rs  submodules.rs  worktrees.rs
src/helpers/: branch_visibility.rs  colors.rs  copy.rs  heatmap.rs  keymap.rs  layout.rs  localisation.rs  logger.rs  palette.rs  recent.rs  spinner.rs  symbols.rs  text.rs  time.rs  version.rs
src/tests/app/draw/: branches.rs  buffered.rs  graph.rs  inspector.rs  pane_window.rs  search.rs  settings.rs  status.rs  statusbar.rs  submodules.rs  viewer.rs  worktrees.rs
src/tests/app/draw/modals/: auth.rs  file_search.rs  input.rs  key_capture.rs  solo.rs
src/tests/app/input/: events.rs  git.rs  modals.rs  navigation.rs  submodules.rs  worktrees.rs
src/tests/app/state/: app.rs
src/tests/core/: buffer.rs  graph_service.rs  reflogs.rs  renderers.rs  submodules.rs  walker.rs  worktrees.rs
src/tests/git/: auth.rs
src/tests/git/actions/: cherrypicking.rs  merging.rs  rebasing.rs  remotes.rs  submodules.rs  worktrees.rs
src/tests/git/os/: path.rs
src/tests/git/queries/: diffs.rs  file_history.rs  files.rs  reflogs.rs  remotes.rs  submodules.rs  worktrees.rs
src/tests/helpers/: branch_visibility.rs  keymap.rs  layout.rs  localisation.rs  palette.rs  symbols.rs
tests/: cli.rs  lib_exports.rs
