[package]
name = "guitar"
version = "0.1.35"
description = "Terminal based git interface"
authors = ["rattleworks <gasimov.abdulali@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
chrono = "0.4"
colored = "3"
crossterm = "0.29.0"
dirs = "6.0.0"
encoding_rs = "0.8.35"
facet = "0.42"
facet-json = "0.42"
git2 = "0.20.3"
im = "15.1.0"
indexmap = "2.12.1"
miette = { version = "7", features = ["fancy"] } # pretty diagnostics
rand = "0.9"
ratatui = "0.30.0"
toml = "0.9.10"
walkdir = "2.5.0"

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "fat"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
